# 42sh

./: .gitignore  CMakeLists.txt  Makefile  auteur  loading_bar.sh  minishell  readme.md  test
includes/: backquotes.h  builtins.h  editor.h  exec.h  expr.h  lex.h  shell.h  shell_struct.h  util.h  variables.h
libft/: Makefile  auteur
libft/includes/: f_colors.h  f_hashtable.h  f_heap.h  f_io.h  f_is.h  f_lib.h  f_lst.h  f_map.h  f_math.h  f_mem.h  f_str.h  f_trie.h  ft_printf.h  libft.h
libft/main/: main.c
src/: prompt.c  shell.c  shell_process.c
src/backquotes/: backquotes_parsing.c  core_exec_backquotes.c  escape_quotes.c  exec_backquotes.c  exec_simplify.c  extract_backq.c  ft_mine_strjoin.c  parse_quotes.c
src/builtins/: b_binary_search.c  b_cd.c  b_clear.c  b_echo.c  b_env.c  b_env_exec.c  b_env_set.c  b_env_unset.c  b_exit.c  b_expr_eval.c  b_pwd.c  b_search_binary.c  is_builtins.c
src/editor/: deb_printer.c  editor.c  editor_insert.c  editor_insert_instant.c  free_e_content.c  handle_keys.c  readline.c  readline_notty.c  readline_raw.c  terminal_manager.c
src/exec/: agregator.c  agregator_to_file.c  analyze_next_and_or.c  central_exec.c  core_exec.c  delete_redir.c  exec_built_in.c  exec_or_and.c  exec_pipe.c  exec_str.c  execute_pipe.c  extract_cmd_and_args.c  fork.c  heredoc.c  open_file.c  redistribute_pipe_redir.c  return_executable.c  signal.c
src/expr/: bundle_funcs_0.c  bundle_funcs_1.c  bundle_funcs_2.c  custom_fun.c  eval_expr.c  eval_expr_npi.c  expr.c  infix2postfix.c  postfix2result.c  stack.c  stack_i.c  te_base.c  te_base_clos.c  (+16 more)
(+380 files in other folders)
